# cerise

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  requirements.txt  setup.cfg
data/: etenudes.yaml
notebooks/USDF/AI examples/: ai_tutorial.ipynb
tests/: test_utils.py
