[metadata]
name = cerise
description = Rubin/LSST analysis code"
author = Leanne Guy
author_email = leanne@lsst.org
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/leannep/cerise

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.10
install_requires =
    bokeh
    deprecated
    pyvo

[options.packages.find]
where = src

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203, N802, N803, N806, N812, N815, N816
exclude = __init__.py